more css adjustments removed unneeded scss for all pages fixed issue with sidenav no longer working due to being inside of fixed nav wrapper removed z-index from faq otherwise it wont open

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -2,7 +2,3 @@
   background-color: #004d00;
 
 }
-img{
-  height: 5vh;
-  background-size: contain;
-}
