--- a/src/components/pages/FAQ/faq.scss
+++ b/src/components/pages/FAQ/faq.scss
@@ -1,6 +1,3 @@
-div {
-  .collapsible-body {
-    text-align: justify;
-    background-color: lightcyan;
-  }
+.card{
+
 }
