--- a/src/components/pages/about/about.scss
+++ b/src/components/pages/about/about.scss
@@ -1,24 +1,11 @@
 .about-wrapper{
-  margin: auto;
-  padding: 0;
-
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
 
 
-  img{
+  /*img{
     height: 20vh;
     align-self: center;
-  }
-
-  .card {
-    .divider {
-      text-align: center;
-    }
-  }
+  }*/
 
 
-  p{
-
-  }
 }
